--- a/styles.scss
+++ b/styles.scss
@@ -22,12 +22,14 @@ h1, h2 {
   font-family: 'Trebuchet MS', sans-serif;  
   color: #739EC9; 
   font-weight: bold; 
-  margin-top: 30px;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .abstract {
   font-size: 0.9rem;   
-  font-weight: 400;       
-  margin: 0 1.2em;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.75);
+  line-height: 1.6;
+  padding-left: 1rem;
+  margin-bottom: 20px;
 }
